<resources>
    <string name="app_name">GitGram</string>
    <string name="splash_desc">GithubGram</string>
    <string name="username">Username</string>
    <string name="input_username">Enter Somebody Name</string>
    <string name="name_user">User Nickname</string>
    <string name="fill_username">\@username</string>
    <string name="repositories">\??? Repositories</string>
    <string name="fill_followers">\??? Followers</string>
    <string name="fill_following">\??? Following</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="setting">setting</string>
    <string name="dark_mode">Dark Mode</string>
</resources>